fix bug which caused the outline display to use medium-bp instead of big-bp to toggle visibility

--- a/assets/scss/_outline.scss
+++ b/assets/scss/_outline.scss
@@ -2,7 +2,7 @@ $big-bp: 1366px;
 
 aside#outline {
     display: none;
-    @media screen and (min-width: $medium-bp) {
+    @media screen and (min-width: $big-bp) {
         display: flex;
     }
 
